--- a/package.json
+++ b/package.json
@@ -22,5 +22,8 @@
         "onlyBuiltDependencies": [
             "esbuild"
         ]
+    },
+    "dependencies": {
+        "flowbite": "^3.1.2"
     }
 }
