--- a/composer.json
+++ b/composer.json
@@ -10,9 +10,11 @@
     "license": "MIT",
     "require": {
         "php": "^8.2",
+        "hotwired-laravel/turbo-laravel": "^2.3",
         "laravel/framework": "^12.0",
         "laravel/socialite": "^5.19",
-        "laravel/tinker": "^2.10.1"
+        "laravel/tinker": "^2.10.1",
+        "livewire/livewire": "^3.6"
     },
     "require-dev": {
         "fakerphp/faker": "^1.23",
