--- a/composer.json
+++ b/composer.json
@@ -13,8 +13,7 @@
         "hotwired-laravel/turbo-laravel": "^2.3",
         "laravel/framework": "^12.0",
         "laravel/socialite": "^5.19",
-        "laravel/tinker": "^2.10.1",
-        "livewire/livewire": "^3.6"
+        "laravel/tinker": "^2.10.1"
     },
     "require-dev": {
         "fakerphp/faker": "^1.23",
