Refactor Dockerfile and docker-compose.yml for Laravel setup; enhance homepage with modular components for product display, search, pagination, and modals; implement SSH setup script for server access.

--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -11,8 +11,8 @@ services:
     ports:
       - "4095:8000"
     environment:
-      APP_ENV: local
-      APP_DEBUG: true
       APP_KEY: base64:Aj6SOBBldGGCNgqLWFnoZiVIWj7nhxDivtHC1tmMWes=
       APP_URL: http://localhost:8000
       APP_SERVE: octane
+    env_file:
+      - .env
