--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -1,41 +1,61 @@
 version: '3.8'
 
 services:
+  # Aplikasi Laravel (PHP + Apache)
   app:
     build:
       context: .
       dockerfile: Dockerfile
-    container_name: laravel
+    container_name: laravel_app # Nama lebih deskriptif
     ports:
-      - "4095:80"
+      - "4095:80" # Host Port : Container Port (Apache)
     volumes:
+      # Mount kode aplikasi untuk development (akan override COPY . . saat runtime)
       - .:/var/www/html
+      # Kecualikan direktori yang tidak perlu di-mount atau dikelola oleh container
+      - /var/www/html/vendor
+      - /var/www/html/node_modules
+      # Pastikan storage persisten jika tidak di-mount dari host
+      # - app_storage:/var/www/html/storage
     depends_on:
       - db
+    env_file:
+      - .env # Muat environment variables dari .env
     environment:
-      APP_KEY: base64:Aj6SOBBldGGCNgqLWFnoZiVIWj7nhxDivtHC1tmMWes=
-      APP_URL: https://toko.asepharyana.cloud
+      # Paksa beberapa variabel jika diperlukan (override .env)
       DB_HOST: db
       DB_PORT: 3306
-      DB_DATABASE: laravel
-      DB_USERNAME: laravel
-      DB_PASSWORD: secret
-    env_file:
-      - .env
+      # APP_URL: http://localhost:4095 # Sesuaikan untuk environment lokal jika perlu
+      # APP_DEBUG: "true"
+    networks:
+      - laravel_network # Gunakan network kustom
 
+  # Database MariaDB
   db:
-    image: mariadb:10.11
-    container_name: mariadb
+    image: mariadb:10.11 # Atau versi terbaru yang stabil
+    container_name: laravel_db # Nama lebih deskriptif
     restart: unless-stopped
     environment:
-      MYSQL_ROOT_PASSWORD: root
-      MYSQL_DATABASE: laravel
-      MYSQL_USER: laravel
-      MYSQL_PASSWORD: secret
+      MYSQL_ROOT_PASSWORD: ${DB_ROOT_PASSWORD:-root} # Ambil dari .env atau default 'root'
+      MYSQL_DATABASE: ${DB_DATABASE:-laravel}
+      MYSQL_USER: ${DB_USERNAME:-laravel}
+      MYSQL_PASSWORD: ${DB_PASSWORD:-secret}
     volumes:
+      # Gunakan named volume untuk persistensi data database
       - mariadb_data:/var/lib/mysql
     ports:
-      - "3307:3306"
+      - "3307:3306" # Host Port : Container Port (MariaDB)
+    networks:
+      - laravel_network # Gunakan network kustom
 
+# Definisi Network Kustom
+networks:
+  laravel_network:
+    driver: bridge
+
+# Definisi Named Volume
 volumes:
   mariadb_data:
+    driver: local
+  # app_storage: # Jika ingin storage persisten via volume
+  #   driver: local
