--- a/package.json
+++ b/package.json
@@ -24,6 +24,10 @@
     },
     "dependencies": {
         "@alpinejs/collapse": "^3.14.9",
+        "@alpinejs/intersect": "^3.14.9",
+        "@alpinejs/mask": "^3.14.9",
+        "@alpinejs/morph": "^3.14.9",
+        "@alpinejs/persist": "^3.14.9",
         "@hotwired/turbo": "^8.0.13",
         "alpinejs": "^3.14.9",
         "flowbite": "^3.1.2"
